--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 # Site Author
 author:
   name             : "Thato Mogotsi"
-  avatar           : "Display-Picture.jpg"
-  bio              : "Data Scientist"
-  location         : "Johannesburg, RSA"
+  avatar           : "Display-Picture.png"
+  bio              : "Aspiring Data Scientist"
+  location         : "Johannesburg, South Africa"
   employer         :
   pubmed           : 
   googlescholar    : 
