--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        : 
   impactstory      : 
   lastfm           :
-  linkedin         : "Thato Mogotsi"
+  linkedin         : "sirtido"
   medium           :  
   orcid            :  
   pinterest        :
